# connector-rust

./: Cargo.toml  README.md
.github/workflows/: crates-io.yml  rust.yml
examples/ethereum/: config.yaml  ethereum.rs  manifest.yaml
examples/ethereum/chain/: chain.proto  chain.rs  mod.rs
src/: config.rs  connector.rs  lib.rs  manifest.rs  proto_registry.rs
src/kafka_utils/: key.rs  message.rs  mod.rs  producer.rs  topic.rs
src/kafka_utils/proto_test/: chain.proto  chain.rs  ethereum.proto  ethereum.rs  evm.proto  evm.rs  mod.rs  utils.rs
