[package]
name = "nakji-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
log = "0.4"
env_logger = "0.10.0"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
semver = "1.0"
thiserror = "1.0"
config = "0.13.0"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
walkdir = "2"